fix : grid bug on firefox

--- a/assets/modal.css
+++ b/assets/modal.css
@@ -48,7 +48,7 @@
   overflow-y: auto;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, minmax(0, 1fr));
   grid-auto-rows: 100px;
   row-gap: 30px;
   column-gap: 10px;
